<resources>
    <string name="app_name">Cars</string>
    <string name="error">Opps!, some error has occurred</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="honda">Honda</string>
    <string name="image_of_ccar_ategory">Image of car category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_12_000">$12,000</string>
    <string name="milage_km">Milage Km</string>
    <string name="buy">Buy</string>
</resources>