<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/roundCardView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="0dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/categoryPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_of_ccar_ategory" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/ategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/honda"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/roundCardView"
            app:layout_constraintTop_toBottomOf="@+id/roundCardView" />

        <TextView
            android:id="@+id/milage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/milage_km"
            app:layout_constraintEnd_toEndOf="@+id/ategoryTitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ategoryTitle"
            app:layout_constraintTop_toBottomOf="@+id/ategoryTitle" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_12_000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/milage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/milage"
            app:layout_constraintTop_toBottomOf="@+id/milage" />

        <Button
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            app:layout_constraintBottom_toBottomOf="@+id/price"
            app:layout_constraintEnd_toEndOf="@+id/roundCardView"
            app:layout_constraintTop_toBottomOf="@+id/roundCardView"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>